# col-cp-nizk

./: .gitignore  README.md
collaborative-cp-snarks/: Cargo.toml
collaborative-cp-snarks/scripts/: run_all_bp_const.sh  run_all_bp_party.sh  run_all_cts_vary_party.sh  run_all_cts_vary_witness.sh  run_all_groth_const.sh  run_all_groth_party.sh  run_all_ipp.sh  run_all_leggroth_const.sh  run_all_leggroth_party.sh  run_all_single_bp.sh  run_all_single_groth.sh  run_all_stc_vary_party.sh  run_all_stc_vary_witness.sh  run_cts_test.zsh  run_groth_test.zsh  run_legogroth_docker.sh  run_legogroth_test.zsh  run_maf_test.zsh  run_mpc_ipp_test.zsh  run_mpc_prover_with_link.zsh  run_n_dockers.sh  run_single_bp_test.zsh  run_single_groth_test.zsh  run_single_mpc_ipp_test.zsh  run_stc_test.zsh  run_test_cplink_n_parties.zsh
collaborative-cp-snarks/src/: lib.rs  tests.rs
collaborative-cp-snarks/src/bp/: errors.rs  generators.rs  generators_381.rs  inner_product_proof.rs  inner_product_proof_381.rs  mod.rs  transcript_381.rs  transcript_bp.rs  util.rs
collaborative-cp-snarks/src/bp/r1cs/: constraint_system.rs  linear_combination.rs  mod.rs  proof.rs  prover.rs  test.rs  verifier.rs
collaborative-cp-snarks/src/bp/r1cs_mpc/: mod.rs  mpc_constraint_system.rs  mpc_generators.rs  mpc_inner_product.rs  mpc_linear_combination.rs  mpc_prover.rs  proof.rs  test.rs  test_inner_product.rs  test_mpc_prover.rs  (+1 more)
collaborative-cp-snarks/src/globals/: mod.rs
collaborative-cp-snarks/src/mpc/: beaver.rs  field.rs  mod.rs  pairing.rs  spdz.rs  spdz_field.rs  spdz_pairing.rs  spdz_witness_distribution.rs  tests.rs  witness_distribution.rs
collaborative-cp-snarks/src/network/: mod.rs  tests.rs
collaborative-cp-snarks/src/snark/: circuit.rs  mod.rs
collaborative-cp-snarks/src/stats/: mod.rs
docker/: Dockerfile  (+2 more)
eval/: pyproject.toml
eval/scripts/: bp_const.py  col-com.py  communication.py  compare.py  compile_results.py  compile_results_median.py  gro16.py  party.py
(+45 files in other folders)
