[package]
name = "collaborative-cp-snarks"
authors = ["Mohammed Alghazwi <m.ghazwi@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "0.4.0", features = ["print-trace"] }
ark-bls12-381 = { version = "0.4.0" }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = [
  "snark",
] }
ark-ec = { version = "0.4.2" }
ark-ff = { version = "0.4.2" }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-poly = { version = "0.4.2", default-features = false }
ark-relations = "0.4.0"
ark-serialize = "0.4.2"
ark-snark = "0.4.0"
bincode = "1.3.3"
bytes = "1.5.0"
derivative = "2"
futures = "0.3.30"
itertools = "0.12.0"
lazy_static = "1.4.0"
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = { version = "1", default-features = false }
num-bigint = { version = "0.4.4", default-features = false }
once_cell = "1.19.0"
rand = "0.8.5"
serial_test = "3.0.0"
tokio = { version = "1.35.1", features = [
  "macros",
  "rt",
  "net",
  "test-util",
  "sync",
] }
merlin = { version = "2", default-features = false }
zeroize = "1.7.0"
strum = "0.26.1"
digest = { version = "0.8", default-features = false }
strum_macros = "0.26.1"
futures-util = "0.3"
unzip-n = "0.1"
subtle = "2.5.0"
rayon = "1"
csv = "1.3.0"
byteorder = { version = "1", default-features = false }