[project]
name = "co-cp-nizk-evalutation"
version = "0.1.0"
description = "evaluation of co-cp-nizk"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.0,<3.0.0",
    "matplotlib>=3.8.3,<4.0.0",
    "numpy>=1.26.4,<2.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
